--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-:root {
+.root {
   --primary: #44e9ff;
   --secondary: #497980;
   --tertiary: rgb(192, 246, 253);
@@ -10,7 +10,7 @@
   font-size: 62.5%;
 }
 
-body {
+.body {
   background: #ededed;
   color: var(--grey);
   margin: 0;
@@ -21,30 +21,29 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-header {
+.header {
   background: var(--secondary);
   padding: 30px 25px;
   border-bottom: 5px solid var(--primary);
 }
 
-header p {
+.header p {
   color: var(--tertiary);
   margin: 5px 0 20px;
   font-size: 2rem;
 }
 
-p,
-li {
+.p, li {
   font-size: 1.6rem;
 }
 
-form {
+.form {
   display: flex;
   align-items: flex-end;
   flex-wrap: wrap;
 }
 
-form input {
+.form input {
   outline: none;
   border: none;
   padding: 12px;
@@ -54,12 +53,12 @@ form input {
   border-radius: 12px;
 }
 
-form .form-group {
+.form .form-group {
   margin: 10px 6px 10px 0;
   flex: 1;
 }
 
-footer {
+.footer {
   width: 100%;
   background: var(--secondary);
   color: var(--tertiary);
